all html (fix errors flagged by Validator)

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <!-- Page title -->
   <title>Scottish Gems</title>
   <!-- Responsive meta tag -->
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Include CSS files -->
   {% include 'partials/css.html' %}
 
