--- a/templates/404.html
+++ b/templates/404.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 <main class="error-404-page">
+    <div class="error-container">
     <h2>404 Error: Page not found</h2>
     <p>Whoops, This wasn't the Gem you were looking for</p>
     <a href="{% url 'home' %}" class="btn btn--success">Home</a>
