--- a/templates/500.html
+++ b/templates/500.html
@@ -7,7 +7,7 @@
 <main class="error-500-page">
     <h2>500 Error: Problem with the server</h2>
     <p>Whoops, let's take you home..</p>
-    <a href="{% url 'home' %}" class="btn btn--success">Home</a>
+    <a href="{% url 'home' %}" class="btn btn--success error-btn">Home</a>
 </main>
 
 {% endblock %}
