--- a/templates/404.html
+++ b/templates/404.html
@@ -8,7 +8,7 @@
     <div class="error-container">
     <h2>404 Error: Page not found</h2>
     <p>Whoops, This wasn't the Gem you were looking for</p>
-    <a href="{% url 'home' %}" class="btn btn--success">Home</a>
+    <a href="{% url 'home' %}" class="btn btn--success error-btn">Home</a>
 </main>
 
 {% endblock %}
