gem_detail.html(add icons to page)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,13 @@ nav {
     color: white;
 }
 
+.info-message{
+    color: #fff;
+    font-family: inherit;
+    text-align: center;
+    font-weight: 600;
+    margin-top: 10px;
+}
 .page-sub-title {
     position: absolute;
     bottom: -7%;
