--- a/templates/gem_posts/edit_comment.html
+++ b/templates/gem_posts/edit_comment.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="edit-comment">
     <!-- Page title -->
     <h2>Edit Comment</h2>
 
@@ -12,4 +13,5 @@
         <!-- Submit button -->
         <button type="submit">Update Comment</button>
     </form>
+</div>
 {% endblock %}
