style.css( edit style to pages)

--- a/templates/accounts/favorites.html
+++ b/templates/accounts/favorites.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block info_message %}{% endblock %}
 {% block content %}
     <h1 class="detail-view-header fav-title">Favorite Posts</h1>
     <!-- Loop through favorite posts -->
