--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,6 +62,10 @@ nav {
     font-weight: 600;
 }
 
+.add-place-page,
+.login-page{
+    background-color: #445261;
+}
 /* Posts container styles */
 .posts-container {
     position: relative;
@@ -343,6 +347,10 @@ nav {
     font-size: 140%;
 }
 
+.login-form-container{
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
 
 
 .fa-arrow-circle-left{
@@ -410,7 +418,7 @@ nav {
     border-style: groove;
     margin: 0 40%;
     width: 100%;
-    right: 25px;
+    /* right: 25px; */
     position: relative;
 }
 
@@ -515,6 +523,11 @@ nav {
     max-width: fit-content;
 }
 
+.comment.btn,
+.edit-comment-btn {
+    align-self: center;
+}
+
 .cancel-btn {
     width: 12%;
 }
@@ -540,7 +553,16 @@ nav {
     align-items: center;
 }
 
-.comment-input {
+.edit-comment-form{
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        margin-top: 30px;
+        margin-bottom: 50px;
+}
+
+.comment-input,
+.comment-edit {
     width: 100%;
     border-radius: 20px;
     height: 100px;
@@ -549,6 +571,11 @@ nav {
     border: 0.5px solid;
     margin-bottom: 20px;
     box-shadow: 2px 2px 2px 2px #6A5ABD
+}
+
+.comment-edit{
+    width: 500px;
+    height: 300px;
 }
 
 .comment-input::placeholder {
@@ -593,6 +620,13 @@ nav {
     color: #fff;
     font-family: initial;
     font-size: 140%;
+}
+
+.edit-comment{
+    height: 700px;
+    width: 600px;
+    margin-top: 5vh;
+    margin-bottom: 10px;
 }
 
 .error-404-page,
