--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -1,5 +1,5 @@
-{% extends "root.html" %}
-
+{% extends "base.html" %}
+{% block info_message %}{% endblock %}
 {% block content %}
 <section class="logout-page">
     <div class="logout-container">
