--- a/templates/gem_posts/delete_gem.html
+++ b/templates/gem_posts/delete_gem.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block info_message %}{% endblock %}
 {% block navbar %} {% endblock %}
 {% block header %} {% endblock %}
 
