--- a/templates/root.html
+++ b/templates/root.html
@@ -14,7 +14,7 @@
     <title>Scottish Gems</title>
 </head>
 
-<body>
+<body class="d-flex flex-column h-100 main-bg">
     {% include 'partials/navbar.html' %}
 
     {% include 'partials/header.html' %}
