style.css( fix styles)

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
   </div>
   {% endif %}
 
-  <main class="flex-shrink-0 main-bg">
+  <main class="flex-shrink-0 main-bg main-page">
     <!-- Display messages if any -->
     {% block info_message %}
   <div class="info-message">
