--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,6 +62,14 @@ nav {
     font-weight: 600;
 }
 
+.main-page{
+    padding-left: 10px;
+    padding-right: 20px;
+}
+
+
+
+
 .add-place-page,
 .login-page{
     background-color: #445261;
@@ -416,7 +424,7 @@ nav {
     color: white;
     border: #6A5ABD;
     border-style: groove;
-    margin: 0 40%;
+    margin: 0;
     width: 100%;
     /* right: 25px; */
     position: relative;
@@ -665,9 +673,10 @@ nav {
 
     .user-links {
         position: relative;
-        right: 255px;
         width: fit-content;
         }
+    
+    
 }
 
 
