--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,35 +1,35 @@
-{% load i18n %}
+{% extends "root.html" %}
 {% load static %}
 {% include 'partials/css.html' %}
 {% include 'partials/navbar.html' %}
 
 {% block content %}
-    <!-- Log In Section -->
-    <section class="login-page">
-        <div class="login-form-container">
-            <div class="login-form-content">
-                <div class="login-form-title">
-                    <h2 class="login-title">Log In</h2>
-                </div>
-                <!-- Log In Form -->
-                <form class="login login-form-content" method="post" action="{% url 'account_login' %}">
-                    {% csrf_token %} 
-                    <!-- Django form fields -->
-                    {{ login_form.as_p }}
-                    {% if redirect_field_value %}
-                        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                    {% endif %}
-                    <!-- Log In Button -->
-                    <button class="primaryAction btn btn--success login-form-btn" type="submit">Log In</button>
-                </form>
-                <p class="if-no-account">Don't have an account? Then please
-                    <a href="{% url 'signup' %}"><strong>sign up</strong>.</a>
-                </p>
-                <div>
+<!-- Log In Section -->
+<section class="login-page">
+    <div class="login-form-container">
+        <div class="login-form-content">
+            <div class="login-form-title">
+                <h2 class="login-title">Log In</h2>
+            </div>
+            <!-- Log In Form -->
+            <form class="login login-form-content" method="post" action="{% url 'account_login' %}">
+                {% csrf_token %}
+                <!-- Django form fields -->
+                {{ login_form.as_p }}
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+                <!-- Log In Button -->
+                <button class="primaryAction btn btn--success login-form-btn" type="submit">Log In</button>
+            </form>
+            <p class="if-no-account">Don't have an account? Then please
+                <a href="{% url 'signup' %}"><strong>sign up</strong>.</a>
+            </p>
+            <div>
                 <span id="close-btn"><i class="fas fa-arrow-circle-left" title="Return to Homepage"></i></span>
-                </div>
             </div>
         </div>
-    </section>
-        <script src="{% static 'js/back-btn.js' %}"></script>
+    </div>
+</section>
+<script src="{% static 'js/back-btn.js' %}"></script>
 {% endblock %}
