--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "root.html" %}
 {% block info_message %}{% endblock %}
 {% block content %}
 <section class="logout-page">
