--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -1,25 +1,25 @@
-{% extends "base.html" %}
+{% extends "root.html" %}
 
 {% block content %}
-    <!-- Sign Up Form Section -->
-    <section class="signup-page">
-        <div class="signup-form-container">
-            <div class="signup-form-content">
-                <div class="signup-form-title">
-                    <h2>Sign Up</h2>
-                </div>
-                <!-- Sign Up Form -->
-                <form class="signup signup-form-content" id="signup_form" method="post">
-                    {% csrf_token %}
-                    <!-- Django form fields -->
-                    {{ form.as_p }}
-                    <!-- Submit Button -->
-                    <button class="btn btn--success signup-form-btn" type="submit" name="signup">Sign up</button>
-                </form>
-                <div>
-                    <span id="close-btn"><i class="fas fa-arrow-circle-left" title="Return to Homepage"></i></span>
-                </div>
+<!-- Sign Up Form Section -->
+<section class="signup-page">
+    <div class="signup-form-container">
+        <div class="signup-form-content">
+            <div class="signup-form-title">
+                <h2>Sign Up</h2>
+            </div>
+            <!-- Sign Up Form -->
+            <form class="signup signup-form-content" id="signup_form" method="post">
+                {% csrf_token %}
+                <!-- Django form fields -->
+                {{ form.as_p }}
+                <!-- Submit Button -->
+                <button class="btn btn--success signup-form-btn" type="submit" name="signup">Sign up</button>
+            </form>
+            <div>
+                <span id="close-btn"><i class="fas fa-arrow-circle-left" title="Return to Homepage"></i></span>
             </div>
         </div>
-    </section>    
+    </div>
+</section>
 {% endblock %}
