--- a/templates/root.html
+++ b/templates/root.html
@@ -19,7 +19,7 @@
 
     {% include 'partials/header.html' %}
 
-    <main class="flex-shrink-0 main-bg">
+    <main class="flex-shrink-0">
         {% block content %}
         {% endblock %}
     </main>
